--- a/frontend/src/app/product-filter/product-filter.component.html
+++ b/frontend/src/app/product-filter/product-filter.component.html
@@ -1,77 +1,3 @@
-<!--
-<ul class="list-group ">
-                         
-        <li class="list-group-item">
-                <p class="headtype">Types</p> 
-        </li>
-        <li class="hey">  
-        <ul class="list-group" style="flex:1">
-        <li class="list-group-item cat1">
-               Normal
-        </li>
-        <li class="list-group-item cat2">
-               Fire
-        </li>
-
-        <li class="list-group-item cat3">
-                Water
-        </li>
-
-        <li class="list-group-item cat4">
-                Grass
-        </li>
-        <li class="list-group-item cat5">
-                Electric
-        </li>
-        <li class="list-group-item cat6">
-               Ice
-        </li>
-        <li class="list-group-item cat7">
-                Fighting
-        </li>
-        <li class="list-group-item cat8">
-                Poison
-        </li>
-        <li class="list-group-item cat9">
-                Ground
-        </li>
-
-        </ul>
-        <ul class="list-group" style="flex:1">
-        <li class="list-group-item cat10">
-                Flying
-        </li>
-        <li class="list-group-item cat11">
-                Psychic
-        </li>
-        <li class="list-group-item cat12">
-                Bug
-        </li>
-        <li class="list-group-item cat13">
-                Rock
-        </li>
-        <li class="list-group-item cat14">
-               Ghost
-        </li>
-        <li class="list-group-item cat15">
-                Dragon
-        </li>
-        <li class="list-group-item cat16">
-                Dark
-        </li>
-        <li class="list-group-item cat17">
-                Steel
-        </li>
-        <li class="list-group-item cat18">
-                Fairy
-        </li>
-        </ul>
-</li>
-      
-
-                </ul> -->
-
-                
 <ul class="list-group ">
                          
         <li class="list-group-item headtype">
@@ -135,12 +61,12 @@
                 Fairy
         </li>
 
-        <li style="margin-top:20px">
-                <img src="https://i.imgur.com/vCrFjb9.png" alt="" class="btn-img">
+        <li style="margin-top:20px" class="img-container">
+                <img src="https://i.imgur.com/4TvkjWM.png" alt="" class="btn-img" routerLink="/category">    
         </li>
 
-        <li>
-                <img src="https://i.imgur.com/qrVhmHy.png" alt="" class="btn-img">
+        <li class="img-container">
+                <img src="https://i.imgur.com/qrVhmHy.png" alt="" class="btn-img" routerLink="/category">
         </li>
 
         
