edit shopping-cart layout

--- a/frontend/src/app/admin/admin-products/admin-products.component.css
+++ b/frontend/src/app/admin/admin-products/admin-products.component.css
@@ -5,6 +5,10 @@
     padding-bottom: 200px;
 }
 
+.sticky-top {
+  top: 0;
+}
+
 .container-fluid {
     border: 1px solid #e0e0e0;
     border-radius: 10px;
