--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -44,8 +44,12 @@
       </div>
 
       <a class="nav-link cucu" routerLink="/shopping-cart">
-        <img src="https://cdn.onlinewebfonts.com/svg/img_223715.png" class="cart" style="width: 26px;" alt="">
-        <span class="badge badge-warning badge-pill">1</span>
+      <div class="cart">
+        <button class="shopping-cart"> 
+          <span class="cart-status">1</span> 
+          <span class="cart-status-2">1</span>
+        </button>
+      </div>
       </a>
     </div>
   </div>
