--- a/frontend/src/app/admin/admin-products/admin-products.component.html
+++ b/frontend/src/app/admin/admin-products/admin-products.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-        <div class="col col-2" >
+        <div class="col col-2 sticky-top" >
         <admin-nav></admin-nav>
     </div>
         <div class="col col-10">
