--- a/frontend/src/app/shopping-cart/shopping-cart.component.css
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.css
@@ -3,9 +3,6 @@
         border-right: 1px solid #e0e0e0;
     }
 
-.container {
-    font-size: 17px;
-}
 
 table tr td {
     vertical-align: middle;
@@ -20,14 +17,24 @@ table {
     border: none;
 }
 
-.boro {
-margin-top: 70px; 
-padding-top: 30px;
-box-shadow: 
-            -50px -6px 0 0 white,
-            0 -3px 0 0 #242424;
+ul {
+    list-style-type: none;
+    padding-left: 0;
+    padding-right: 0;
 }
 
+.item {
+    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-right: 0;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+
+.img-container {
+    width: 100px;
+    height: 100px;
+}
 
 .fas {
     transition: 0.2s ease;
@@ -69,12 +76,95 @@ display: block;
 }
 
 
-.col {
-    padding-left: 60px;
-}
-
-
 .thumbnail {
     width: 40px;
 
 }
+
+.detail {
+    padding-left: 60px;
+}
+
+.del-sub {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.sub-total {
+    font-size: 18px;
+    margin-bottom: 0;
+}
+
+.pro-name {
+    font-weight: 600;
+    font-size: 18px;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.pro-price {
+opacity: 0.6;
+margin-top: -20px;
+}
+
+.del-btn {
+    background: transparent;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    position: relative;
+    border: none;
+    outline: none;
+}
+
+.del-btn:after {
+position: absolute;
+content: " ";
+display: block;
+height: 2px;
+width: 20px;
+transform: rotate(45deg);
+background-color: #242424;
+transition: 0.2s;
+}
+
+.del-btn::before {
+    position: absolute;
+    content: " ";
+    display: block;
+    height: 2px;
+    width: 20px;
+    transform: rotate(-45deg);
+    background-color: #242424;
+    transition: 0.2s;
+    }
+
+    .del-btn:hover:after {
+transform: rotate(0deg);
+    }
+
+    .del-btn:hover:before {
+        transform: rotate(0deg);
+            }
+
+.total {
+    font-size: 25px; 
+    font-weight: bold; 
+    text-align: right;
+}
+
+
+.boro {
+    margin-top: 70px; 
+    padding-top: 30px;
+    }
+
+.total-price {
+    font-size: 35px; 
+    color: #d93a3a; 
+    border-top: 3px solid #242424;
+    padding-top: 40px;
+}
+
