--- a/frontend/src/app/logo/logo.component.css
+++ b/frontend/src/app/logo/logo.component.css
@@ -57,16 +57,15 @@
 
 .ball:hover .top{
 transform: translateX(10px)
-           translateY(-10px)
-           rotate(-20deg) ;
+           rotate(-35deg) ;
 padding-top: 4px;
 height: 21px;
 }
 
 .ball:hover .bot{
-    transform: translateX(10px)
-               translateY(10px)
-               rotate(20deg) ;
+    transform: translateX(48px)
+               translateY(-17px)
+               rotate(-145deg) ;
                height: 21px;
                padding-top: 4px;
 }
@@ -94,4 +93,66 @@ span {
 
 .ball:hover i {
     transform: rotate(10deg);
+}
+
+.fa-circle{
+    font-size: 10px;
+    color: #d93a3a;
+    position: absolute;
+    transition: 0.2s;
+    top: 22px;
+    left: 15px;
+    z-index: -1;
+    }
+    
+    .fa-pagelines{
+        font-size: 24px;
+    color: yellowgreen;
+    transform: rotate(135deg);
+    position: absolute;
+    transition: 0.2s;
+    top: 23px;
+    left: 14px;
+z-index: -1;
+    }
+
+.ball:hover ~ .fa-circle{
+top: 39px;
+left: 36px;
+
+}
+
+.ball:hover ~ .fa-pagelines{
+top: 40px;
+left: 43px;
+
+}
+
+.long-text {
+    position: absolute;
+    font-size: 10px;
+    font-weight: 600;
+    top: 20px;
+    left: 15px;
+    padding-top: 20px;
+z-index: -1;
+    transition: 0.2s;
+}
+
+
+.ball:hover ~ .long-text {
+    top: 40px;
+    left: 40px;
+}
+
+.ball:hover ~ .h {
+transform: rotate(55deg) translateX(-10px);
+}
+
+.ball:hover ~ .i {
+    transform: rotate(45deg) translateX(-5px);
+}
+
+.ball:hover ~ .excl {
+    transform: rotate(35deg);
 }
