--- a/frontend/src/app/logo/logo.component.html
+++ b/frontend/src/app/logo/logo.component.html
@@ -1,12 +1,16 @@
-
-    <div class="ball">
-        <div class="top">
-            <div class="semi"></div>
+<div class="ball">
+    <div class="top">
+        <div class="semi"></div>
     </div>
-        
-        <div class="bot">
-            <div class="semi white"></div>
-        </div>
 
-        <div class="title"> <span style="color: #242424;"> POKESHOP</span>  </div>
+    <div class="bot">
+        <div class="semi white"></div>
+    </div>
+
 </div>
+
+<i class="fas fa-circle"></i>
+<i class="fa fa-pagelines"></i>
+<p class="long-text h">H</p>
+<p class="long-text i">I</p>
+<p class="long-text excl">!</p>
