--- a/frontend/src/app/product-card/product-card.component.css
+++ b/frontend/src/app/product-card/product-card.component.css
@@ -1,7 +1,7 @@
 
 .card {
     position: relative;
-    width: 12rem;
+    width: 200px;
     border: none;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -18,8 +18,9 @@
 
 .old-price {
     color : #b3b3b3;
-    font-size: 18px;
-    margin-left: 8px;
+    font-size: 15px;
+   margin-top: -20px;
+   margin-bottom: -5px;
     text-decoration-line: line-through;
 }
 
@@ -31,106 +32,115 @@
     font-family: 'Roboto Mono', monospace;
     transition: 0.1s;
 }
-.price {
-    margin-bottom: -20px;
-}
 
-.card:hover .card-name{
-    font-size: 12px;
-transform: translateY(-23px);
-}
-
-.card:hover .card-price {
-    font-size: 15px;
-    transform: translateY(-30px);
-}
 
 .card-price {
     font-weight: 700;
     color : #e73939;
     font-size: 20px;
     transition: 0.1s;
-}
-
-.btn {
-    position: absolute;
-    color:#fff;
-    right:-50px;
-    bottom: 60px;
-    font-size: 18px;
-    transition: 0.2s;
-    width: 40px;
-    height: 40px;
-    background: #d93a3a;
-    border-radius: 100px;
-    box-shadow: 0 2px 5px 0 rgba(236, 42, 42, 0.1),
-    0 5px 15px 0 rgba(236, 42, 42, 0.2);
-}
-
-.btn-black {
-position: absolute;
-color: white;
-bottom: -63px;
-font-size: 16px;
-background-color: #242424;
-width: 100%;
-height: 46px;
-border: none;
-outline: none;
-text-align: center;
-transition: 0.1s;
-cursor: pointer;
-}
-
-.card:hover .btn-black {
-    bottom: 0;
-}
-
-/*
-.btn:after {
-    content: "ADD TO CART";
-    display: inline-block;
-    background: #555555;
-    position: absolute;
-   left: 50%;
-   width: 36px;
-   margin-left: -20px;
-   top: -60px;
-    border-radius: 5px;
-    opacity: 0;
-    color: white;
-    font-family: 'Share Tech Mono', monospace;
-    font-size: 10px ;
-    text-align: center;
-    padding: 5px;
-    transition: 0.2s ease;
-}
-*/
-
-.card:hover .btn {
-    right : 0px;
-    transform: rotate(360deg);
-}
-
-.btn:hover {
-    box-shadow: 0 2px 5px 0 rgba(236, 42, 42, 0.1),
-    0 5px 15px 0 rgba(236, 42, 42, 0.2),
-    0 7px 20px 0 rgba(236, 42, 42, 0.15);
-    transform: rotate(10deg);
-    background: #e25555;
     margin-top: 5px;
-    cursor: pointer;
 }
 
-.btn:hover:after {
-    opacity: 0.6;
-    margin-top: 0px;
-}
+  .card:hover {
+    transform: translateY(0px);
+    /* box-shadow: 0 15px 30px -10px #d93a3ad5;*/
+    box-shadow:
+     -12px 0 0 -10px #fff,
+    12px 0 0 -10px #fff,
+    0 -12px 0 -10px #fff,
+    0 12px 0 -10px #fff,
+    0 0 0 2px #242424;
+  }
 
-.card:hover{
-box-shadow: inset 0 0 0 2px #242424;
-}
-
+.nut-card {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border: none;
+outline: none;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 6px;
+    font-size: 20px;
+  }
+  
+  .add-cart{
+    width: 22px;
+    height: 23px;
+    content: "";
+    display: block;
+    position: relative;
+  border: 2px solid #242424;
+  margin-left: 9px;
+  transition: 0.2s;
+  }
+  
+  .add-cart:after {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    left: 50%;
+    margin-left: -5px;
+    top: -7px;
+   content: " ";
+   display: block;
+   border-radius: 10px 10px 0 0;
+   border: 2px solid #d93a3a;
+   border-bottom: none;
+   transition: 0.2s;
+  }
+  
+  .nut-add{
+    position: absolute;
+    right: -51px;
+    bottom: 11px;
+    transition: 0.2s;
+    background-color: transparent;
+  }
+  
+  .nut-add:after {
+    position: absolute;
+    content: " ";
+    display: block;
+    width: 10px;
+    height: 2px;
+    left: 50%;
+    margin-left: -5px;
+    bottom: 11px;
+    background-color: #d93a3a;
+    transition: 0.2s;
+    z-index: -1;
+  }
+  
+  .nut-add:before {
+    position: absolute;
+    content: " ";
+    display: block;
+    width: 10px;
+    height: 2px;
+    left: 50%;
+    margin-left: -5px;
+    bottom: 11px;
+    background-color: #d93a3a;
+    transition: 0.2s;
+    z-index: -1;
+  }
+  
+  .nut-add:hover:after {
+  transform: rotate(180deg);
+    bottom: 21px;
+  
+  }
+  
+  .nut-add:hover:before {
+  transform: rotate(90deg);
+    bottom: 21px;
+  }
+  
+  .card:hover .nut-add{
+  right: 5px;
+  }
 
 
 
