--- a/frontend/src/app/product-card/product-card.component.html
+++ b/frontend/src/app/product-card/product-card.component.html
@@ -1,24 +1,10 @@
 <div class="card" routerLink="/product-detail">
   <img class="card-img-top" src ="https://img.pokemondb.net/sprites/black-white/normal/venusaur.png" >
-   <!-- <button class="btn"><i class="fas fa-plus"></i></button>-->
-    <button class="btn-black"> ADD TO CART</button>
-    <div  class="card-body">
 
-        <div class="info">
+   <button href="#" class="btn-black nut-card nut-add"><i class="add-cart"></i></button>
+    <div  class="card-body">
           <p class="card-name">Bulbasaur</p>
-        </div>
-        <div class="info price">
           <p class="card-price">$5.00</p>
           <p class="old-price">$9.00</p>
-        </div>
-        <!--
-        <div class="type" style="margin-top: -10px; margin-bottom: -4px;">
-          <span class="fa fa-circle" style="color: yellowgreen;"></span> 
-          <span class="fa fa-circle" style="color: #9778df; margin-left: 10px;"></span>
-        </div>
-        -->
-
     </div>
 </div>
-<!--<i class="fas fa-star"></i> -->
-
